# mcp-code-runner

./: .gitignore  CLAUDE.md  pyproject.toml
docs/superpowers/plans/: 2026-03-14-code-runner-improvements.md  2026-04-26-workspace-and-skills.md
docs/superpowers/specs/: 2026-03-14-code-runner-improvements-design.md
skills_templates/csv_export/: SKILL.md  script.py
skills_templates/schema_dump/: SKILL.md  script.py
skills_templates/snapshot_diff/: SKILL.md  script.py
src/code_runner/: client_pool.py  config_reader.py  executor.py  metrics.py  schema_gen.py  server.py  skills.py  sql_limit.py  workspace.py
tests/: test_bundled_skills.py  test_config_reader.py  test_executor.py  test_metrics.py  test_metrics_integration.py  test_save_skill.py  test_schema_gen.py  test_search_tools.py  test_skills.py  test_skills_overview.py  test_sql_limit.py  test_workspace.py
tests/skills_fixtures/sample_csv/: SKILL.md  script.py
