[project]
name = "code-runner"
version = "0.1.0"
description = "Universal Code Mode MCP server - executes LLM-generated code with access to all MCP tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
code-runner = "code_runner.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_runner"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
tmp_path_retention_count = 3
addopts = "--basetemp=.pytest_tmp"
